// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "authorizer/pb";

package proto;

service Auth {
  rpc Register (AuthRequest) returns (AuthReply) {}
  rpc ConfirmEmail (ConfirmEmailRequest) returns (AuthReply) {}
  rpc Login (AuthRequest) returns (AuthReply) {}
  rpc RefreshToken (RefreshTokenRequest) returns (AuthReply) {}
  rpc RefreshPassword (RefreshPasswordRequest) returns (AuthReply) {}
}

message AuthRequest {
  string correlationID = 1;
  string email = 2;
  string password = 3;
}

message ConfirmEmailRequest {
  string correlationID = 1;
  string email = 2;
  string password = 3;
}

message RefreshTokenRequest {
  string correlationID = 1;
  string email = 2;
  string password = 3;
}

message RefreshPasswordRequest {
  string correlationID = 1;
  string email = 2;
}

message AuthReply {
  uint32 status = 1;
  string message = 2;
}